--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>my first github repository</title>
 </head>
 <body>
-    
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum suscipit, repudiandae recusandae officiis eum asperiores delectus officia! Magni repudiandae, tenetur at quas, voluptatem eos et porro nisi accusamus non repellat!</p>
 </body>
 </html>
